# clipped

./: CMakeLists.txt  README.md  com.github.davidmhewitt.clipped.yml  meson.build  uncrustify.cfg
data/: com.github.davidmhewitt.clipped.appdata.xml  com.github.davidmhewitt.clipped.appdata.xml.in  com.github.davidmhewitt.clipped.desktop  com.github.davidmhewitt.clipped.desktop.in  com.github.davidmhewitt.clipped.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.davidmhewitt.clipped.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+157 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
src/: Application.vala  ClipboardManager.vala  ClipboardStore.vala  KeybindingManager.vala  MainWindow.vala  PreferencesWindow.vala  meson.build
src/Settings/: CustomShortcutSettings.vala  Shortcut.vala
src/Widgets/: AlertView.vala  ClipboardListBox.vala  ClipboardListRow.vala  ShortcutEntry.vala
