sources = files(
    'Settings/CustomShortcutSettings.vala',
    'Settings/Shortcut.vala',
    'Widgets/AlertView.vala',
    'Widgets/ClipboardListBox.vala',
    'Widgets/ClipboardListRow.vala',
    'Widgets/ShortcutEntry.vala',
    'Application.vala',
    'ClipboardManager.vala',
    'ClipboardStore.vala',
    'KeybindingManager.vala',
    'MainWindow.vala',
    'PreferencesWindow.vala'
)